--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+body{
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.loginpage_title{
+  position: relative;
+  top: -800px;
+  color: #187381;
+
+}
+.loginpage_bottom_bar{
+ position: relative;
+ left: 600px;
+  height: 4px;
+  width: 100px;
+  background-color: #FED03C;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.loginpage_input_field{
+  position: relative;
+ top: -800px;
+}
+.login_control{
+   border:none;
+    border-bottom: 1px solid #333;
+    padding: 5px 10px;
+    outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+[placeholder]:focus::-webkit-input-placeholder {
+    transition: text-indent 0.4s 0.4s ease; 
+    text-indent: -100%;
+    opacity: 1;
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ .loginpage_button{
+   width: 150px;
+   height: 40px;
+   outline: none;
+   border: none;
+   background-color: #FED03C;
+   color: white;
+   font-weight: bold;
+   border-radius: 5px;
+   position: relative;
+   left: 120px;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ .right_div{
+   background-color: #FED03C;
+   height: 900px;
+   transform: rotate(125deg);
+   position:relative;
+   left: 980px;
+   top: -580px;
+      box-shadow: 3px 36px 19px #a5a2a2;
+  
+ }
+
+.left_div{
+  background-color: #FED03C;
+  height: 1200px;
+  position: relative;
+  top: -1100px;
+   transform: rotate(125deg);
+       box-shadow: 3px 36px 19px #a5a2a2;
+   
 }
